--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "GY <dev.youngkwok718@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/whosydd/carbon-api.git"
+    "url": "https://github.com/ahmedaisar/maldives-hotels-api.git"
   },
   "license": "MIT",
   "devDependencies": {
