--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   "devDependencies": {
     "@types/node": "^18.11.12",
     "@vercel/node": "^2.8.0",
-    "playwright": "^1.28.1",
     "prettier": "^2.8.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "playwright-aws-lambda": "^0.9.0",
-    "playwright-core": "^1.37.1"
+    "chrome-aws-lambda": "~6.0.0",
+    "puppeteer": "6.0.0"
   }
 }
