--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "chrome-aws-lambda": "~6.0.0",
-    "puppeteer": "6.0.0"
+    "chrome-aws-lambda": "^10.1.0",
+    "puppeteer-core": "^10.1.0"
+  },
+  "peerDependencies": {
+    "puppeteer-core": "^10.1.0"
   }
 }
