--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
+    "playwright-core": "^1.37.1",
     "puppeteer-core": "^10.1.0"
   },
   "peerDependencies": {
