--- a/package.json
+++ b/package.json
@@ -12,17 +12,9 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^18.11.12",
-    "@vercel/node": "^2.8.0",
-    "prettier": "^2.8.1",
-    "typescript": "^4.9.4"
+    "@vercel/node": "^2.8.0"
   },
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
-    "playwright-core": "^1.37.1",
-    "puppeteer-core": "^10.1.0"
-  },
-  "peerDependencies": {
-    "puppeteer-core": "^10.1.0"
+    "playwright": "^1.37.1"
   }
 }
