--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "description": "api for maldives-hotels-api",
   "main": "api/index.ts",
-  "scripts": {},
+  "scripts": {
+    "build": "npm run build && npx playwright install"
+  },
   "keywords": [],
   "author": "0xM1cro <0xm1cro@proton.me",
   "repository": {
