--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "maldives-hotels-api",
   "version": "0.1.0",
   "description": "api for maldives-hotels-api",
-  "main": "api/index.ts",
+  "main": "index.js",
   "scripts": {},
   "keywords": [],
   "author": "0xM1cro <0xm1cro@proton.me",
@@ -11,10 +11,13 @@
     "url": "https://github.com/ahmedaisar/maldives-hotels-api.git"
   },
   "license": "MIT",
-  "devDependencies": {
-    "@vercel/node": "^2.8.0"
-  },
   "dependencies": {
-    "playwright": "^1.37.1"
+    "chrome-aws-lambda": "^6",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "puppeteer-core": "^6"
+  },
+  "devDependencies": {
+    "puppeteer": "^16.2.0"
   }
 }
