--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "maldives-hotels-api",
   "version": "0.1.0",
   "description": "api for maldives-hotels-api",
-  "main": "index.js",
+  "main": "./netlify/functions/index.js",
   "scripts": {},
   "keywords": [],
   "author": "0xM1cro <0xm1cro@proton.me",
@@ -12,10 +12,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@netlify/functions": "^2.0.2",
     "chrome-aws-lambda": "^6",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "puppeteer-core": "^6"
+    "express": "^4.18.2",
+    "puppeteer-core": "^6",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "puppeteer": "^16.2.0"
