--- a/netlify.yml
+++ b/netlify.yml
@@ -1,8 +1,3 @@
-[functions]
-  external_node_modules = ["express", "puppeteer-core", "chrome-aws-lambda", "cors"]
-  node_bundler = "esbuild"
-[[redirects]]
-  force = true
-  from = "/api/*"
-  status = 200
-  to = "/.netlify/functions/api/:splat"
+[build]
+  command = "npm install && npm run build"
+  functions = "functions"
