--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "description": "api for maldives-hotels-api",
   "main": "./server.js",
-  "scripts": {},
+  "scripts": {
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+    "build": "./node_modules/.bin/netlify-lambda build src"
+  },
   "keywords": [],
   "author": "0xM1cro <0xm1cro@proton.me",
   "repository": {
@@ -16,6 +19,7 @@
     "chrome-aws-lambda": "^6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "netlify-lambda": "^2.0.16",
     "puppeteer-core": "^6",
     "serverless-http": "^3.2.0"
   },
