--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "type": "git",
     "url": "https://github.com/ahmedaisar/maldives-hotels-api.git"
   },
+  "engines": {
+    "node": "^16"
+  },
   "license": "MIT",
   "dependencies": {
     "@netlify/functions": "^2.0.2",
