--- a/package.json
+++ b/package.json
@@ -15,15 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "@netlify/functions": "^2.0.2",
-    "axios": "^1.5.0",
-    "chrome-aws-lambda": "^6",
-    "cors": "^2.8.5",
+    "@types/express": "^4.17.17",
     "express": "^4.18.2",
-    "netlify-lambda": "^2.0.16",
-    "puppeteer-core": "^6",
     "serverless-http": "^3.2.0"
-  },
-  "devDependencies": {
-    "puppeteer": "^16.2.0"
   }
 }
