--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "https://github.com/ahmedaisar/maldives-hotels-api.git"
   },
+  "engines": {
+    "node": ">=14 <15"
+  },
   "license": "MIT",
   "dependencies": {
     "chrome-aws-lambda": "^6",
