--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "maldives-hotels-api",
+  "name": "pupnew",
   "version": "0.1.0",
-  "description": "api for maldives-hotels-api",
-  "main": "index.js",
-  "scripts": {},
-  "keywords": [],
-  "author": "0xM1cro <0xm1cro@proton.me",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ahmedaisar/maldives-hotels-api.git"
-  },
+  "private": true,
   "engines": {
-    "node": ">=14 <15"
+    "node": "^14"
   },
-  "license": "MIT",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "chrome-aws-lambda": "^6",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "puppeteer-core": "^6"
+    "chrome-aws-lambda": "^6.0.0",
+    "next": "12.3.1",
+    "puppeteer": "^6.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "puppeteer": "^16.2.0"
+    "eslint": "8.25.0",
+    "eslint-config-next": "12.3.1"
   }
 }
